<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/minwidth_dialog_320dp"
    android:minHeight="@dimen/minHeight_dialog_150dp"
>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dialog_toolbar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_debt"
            android:textSize="15sp"
            android:textColor="@color/amoled_black"
            android:background="@android:color/transparent"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_container"
        android:layout_width="0dp"
        android:layout_height="196dp"
        android:background="@color/dark_gray"
        android:paddingHorizontal="@dimen/padding_dialog_h_40dp"
        android:paddingVertical="@dimen/padding_dialog_v_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_toolbar">

        <TextView
            android:id="@+id/labelPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_balance"
            android:textSize="@dimen/textsize_dialog_label_15sp"
            app:layout_constraintEnd_toEndOf="@id/labelNewBalance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/dialog_container" />

        <TextView
            android:id="@+id/txtCurBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="Php. "
            android:textColor="@color/red"
            android:textSize="@dimen/textsize_dialog_label_15sp"
            app:layout_constraintBottom_toBottomOf="@id/labelPrev"
            app:layout_constraintStart_toStartOf="@id/txtNewBalance" />

        <TextView
            android:id="@+id/labelNewBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_dialog_textinbetween_15dp"
            android:labelFor="@id/txtNewBalance"
            android:text="@string/new_debt_balance"
            android:textSize="@dimen/textsize_dialog_label_15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelPrev" />


        <com.ammuyutan.iou.Util.CurrencyEditText
            android:id="@+id/txtNewBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:inputType="number"
            android:textColor="@color/red"
            android:textSize="@dimen/textsize_dialog_label_15sp"
            app:layout_constraintBottom_toBottomOf="@id/labelNewBalance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/labelNewBalance"
            app:layout_constraintTop_toTopOf="@id/labelNewBalance" />

        <Button
            android:id="@+id/btnCancelDebtUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/btnSaveUpdate"
            app:layout_constraintEnd_toStartOf="@id/btnSaveUpdate"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnSaveUpdate" />

        <Button
            android:id="@+id/btnSaveUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/save"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/btnCancelDebtUpdate"
            app:layout_constraintTop_toBottomOf="@id/labelNewBalance" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>