<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="@dimen/margpad_horizontal_16dp"
        android:paddingTop="@dimen/margpad_vertical_10dp"
        android:paddingRight="@dimen/margpad_horizontal_16dp"
        android:paddingBottom="@dimen/margpad_vertical_10dp">



        <com.mikhaellopez.circularimageview.CircularImageView

            android:id="@+id/imgPhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/blank_profile"

            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/red"
            app:civ_shadow_radius="5"

            app:layout_constraintBottom_toTopOf="@+id/txtName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imgPhoto"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:src="@drawable/blank_profile"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            app:layout_constraintBottom_toTopOf="@+id/txtInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAResolve"
            app:layout_constraintVertical_chainStyle="packed"/>-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/btnTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="takePhoto"
            android:src="@drawable/baseline_photo_camera_black_18dp_x2"

            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/imgPhoto"
            app:layout_constraintEnd_toStartOf="@+id/btnChoosePhoto"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPhoto" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnChoosePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="choosePhoto"
            android:src="@drawable/baseline_insert_photo_black_18"

            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/imgPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/btnTakePhoto"
            app:layout_constraintTop_toBottomOf="@id/imgPhoto" />


        <EditText
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:hint="@string/name"
            android:textColorHint="@color/IOU_Orange"
            android:inputType="textPersonName"
            android:maxWidth="150dp"
            android:minWidth="120dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/labelPhoneNo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPhoto" />


        <!--
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneno"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilName">

            <EditText
                android:id="@+id/txtPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                />

        </com.google.android.material.textfield.TextInputLayout>
-->

        <TextView
            android:id="@+id/labelPhoneNo"
            style="@style/FieldLabel"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/txtPhoneNo"
            android:text="@string/phoneno"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <EditText
            android:id="@+id/txtPhoneNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="phone"

            app:layout_constraintEnd_toStartOf="@id/btnCall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelPhoneNo" />


        <ImageButton
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:onClick="callDebtor"
            android:src="@drawable/ic_call_white_24dp"

            app:layout_constraintBottom_toBottomOf="@id/txtPhoneNo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtPhoneNo"
            app:layout_constraintTop_toTopOf="@id/txtPhoneNo" />

        <TextView
            android:id="@+id/labelEmail"

            style="@style/FieldLabel"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/txtEmail"
            android:text="@string/label_debtor_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPhoneNo" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelEmail" />

        <TextView
            android:id="@+id/labelBalance"
            style="@style/FieldLabel"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/txtBalance"
            android:text="@string/label_debtor_balance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtEmail" />

        <com.ammuyutan.iou.Util.CurrencyEditText
            android:id="@+id/txtBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="number"

            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelBalance" />

        <!--<ImageButton-->
        <!--android:id="@+id/btnAIncreaseDebt"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="5dp"-->
        <!--android:scaleType="fitCenter"-->
        <!--android:src="@drawable/baseline_add_black_18dp_x2"-->
        <!--android:visibility="visible"-->
        <!--app:layout_constraintBottom_toBottomOf="@id/txtBalance"-->
        <!--app:layout_constraintEnd_toStartOf="@id/btnAPartialPayment"-->
        <!--app:layout_constraintStart_toEndOf="@id/txtBalance"-->

        <!--/>-->

        <!--<ImageButton-->
        <!--android:id="@+id/btnAPartialPayment"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:scaleType="fitCenter"-->
        <!--android:src="@drawable/baseline_remove_black_18"-->
        <!--android:visibility="visible"-->
        <!--app:layout_constraintBottom_toBottomOf="@id/txtBalance"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->


        <!--/>-->


        <TextView
            android:id="@+id/labelDeadline"
            style="@style/FieldLabel"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/txtDeadline"
            android:text="@string/label_debtor_deadline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtBalance" />

        <EditText
            android:id="@+id/txtDeadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:textIsSelectable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelDeadline" />

        <!--        <Button
            android:id="@+id/btnAExtendDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Extend"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/txtDeadline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtDeadline"
            app:layout_constraintTop_toBottomOf="@id/labelDeadline" />-->

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="executeProcess"
            android:text="@string/submit"

            app:layout_constraintBottom_toTopOf="@id/labelActions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDeadline" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="editFields"
            android:padding="6dp"
            android:src="@drawable/ic_create_white_24dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/txtName"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/labelActions"
            style="@style/FieldLabel"
            android:layout_marginBottom="200dp"
            android:text="@string/actions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnUpdateBalance"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.33"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/increase_decrease_debt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnExtendDeadline"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelActions" />

        <Button
            android:id="@+id/btnExtendDeadline"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.33"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"

            android:background="@color/blue"
            android:text="@string/extend_nl_deadline"
            android:onClick="extendDeadline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnResolveDebt"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/btnUpdateBalance"
            app:layout_constraintTop_toBottomOf="@+id/labelActions" />

        <Button
            android:id="@+id/btnResolveDebt"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.33"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@color/green_success"
            android:text="@string/resolve_debt"
            android:onClick="resolveDebt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/btnExtendDeadline"
            app:layout_constraintTop_toBottomOf="@id/labelActions" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
