<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_gray"
    android:minWidth="330dp"
    android:minHeight="150dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_dialog_changes"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/green_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:textSize="18sp"
            android:textColor="@color/amoled_black"
            android:background="@android:color/transparent"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dialog_inner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/toolbar_dialog_changes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/tv_dialog_changes_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updated"
            android:textColor="@color/IOU_Orange"
            android:textSize="18sp"
            android:scrollHorizontally="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/iv_dialog_changes_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_green_24dp"

            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/margstart_bullet_15dp"
            android:layout_marginTop="@dimen/margpad_vertical_10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_changes_updates"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_dialog_changes_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name: New Name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_dialog_label_15sp"
            android:scrollHorizontally="false"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/iv_dialog_changes_name"
            app:layout_constraintTop_toTopOf="@id/iv_dialog_changes_name"/>

        <ImageView
            android:id="@+id/iv_dialog_changes_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_green_24dp"
            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/margstart_bullet_15dp"
            android:layout_marginTop="@dimen/margtop_bullet_2dp"
            app:layout_constraintTop_toBottomOf="@id/iv_dialog_changes_name"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_dialog_changes_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name: New Name"
            android:textSize="@dimen/textsize_dialog_label_15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="5dp"
            android:scrollHorizontally="false"
            app:layout_constraintStart_toEndOf="@id/iv_dialog_changes_phone"
            app:layout_constraintTop_toTopOf="@id/iv_dialog_changes_phone"/>

        <ImageView
            android:id="@+id/iv_dialog_changes_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_green_24dp"
            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/margstart_bullet_15dp"
            android:layout_marginTop="@dimen/margtop_bullet_2dp"
            app:layout_constraintTop_toBottomOf="@id/iv_dialog_changes_phone"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_dialog_changes_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name: New Name"
            android:textSize="@dimen/textsize_dialog_label_15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="5dp"
            android:scrollHorizontally="false"
            app:layout_constraintStart_toEndOf="@id/iv_dialog_changes_email"
            app:layout_constraintTop_toTopOf="@id/iv_dialog_changes_email"/>
        <ImageView
            android:id="@+id/iv_dialog_changes_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_green_24dp"
            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/margstart_bullet_15dp"
            android:layout_marginTop="@dimen/margtop_bullet_2dp"
            app:layout_constraintTop_toBottomOf="@id/iv_dialog_changes_email"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/tv_dialog_changes_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name: New Name"
            android:textSize="@dimen/textsize_dialog_label_15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="5dp"
            android:scrollHorizontally="false"
            app:layout_constraintStart_toEndOf="@id/iv_dialog_changes_balance"
            app:layout_constraintTop_toTopOf="@id/iv_dialog_changes_balance"
            />

        <ImageView
            android:id="@+id/iv_dialog_changes_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_green_24dp"
            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/margstart_bullet_15dp"
            android:layout_marginTop="@dimen/margtop_bullet_2dp"
            app:layout_constraintTop_toBottomOf="@id/iv_dialog_changes_balance"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_dialog_changes_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name: New Name"
            android:textSize="@dimen/textsize_dialog_label_15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="5dp"
            android:scrollHorizontally="false"
            app:layout_constraintStart_toEndOf="@id/iv_dialog_changes_deadline"
            app:layout_constraintTop_toTopOf="@id/iv_dialog_changes_deadline" />

        <Button
            android:id="@+id/btn_dialog_changes_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:tag="@string/tag_dialog_ok_btn"
            android:text="ok"
            android:scrollHorizontally="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_changes_deadline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>